documentation updates
